updated to full width menu items

--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
+	<title>Responsive Menu</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/main.css">
-	<title>Responsive Menu</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="js/responsivemenu.js"></script>
+	<link rel="stylesheet" href="assets/stylesheets/main.css">
 </head>
 <body>
 	
+	<!-- responsive navigation -->
 	<nav class="navigational-menu">
 		<div class="container">
 			<ul>
@@ -27,5 +26,7 @@
 		<span></span>
 	</a><!-- end .button-open -->
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="assets/javascripts/responsivemenu.js"></script>
 </body>
 </html>
