--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	
 	<!-- responsive navigation -->
-	<nav class="navigational-menu">
+	<nav class="navigation-menu">
 		<div class="container">
 			<ul>
 				<li><a href="#">Link 1</a></li>
@@ -20,11 +20,11 @@
 				<li><a href="#">Link 6</a></li>
 			</ul>
 		</div>
-	</nav>
 
-	<a href="#" class="button-open">
-		<span></span>
-	</a><!-- end .button-open -->
+		<button type="button" href="#" class="navigation-toggle">
+			<span></span>
+		</button><!-- /.navigation-toggle -->
+	</nav>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="assets/javascripts/responsivemenu.js"></script>
